# zero-grain

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  ARCHITECTURE.md  COMPLIANCE.md  GRAIN_TODO.md  README.md  SEMANTIC_PLAN.md  TEST_OG_PLAN.md  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: ci.yml
scripts/: auto_doc.py  calc_compliance.py  check_compliance.py  check_deps.py  check_test_completeness.py  update_badges.py
snapshots/: pygrain_v0.2.16.dev20260112.json
src/zero_grain/: __init__.py  core.py
src/zero_grain/python/: __init__.py
tests/: conftest.py  test_coverage_gap.py  test_python.py
tests/og_tests/: data_loader_test.py  data_sources_test.py  operations_test.py  options_test.py  record_test.py  samplers_test.py  test_coverage_gap.py
tests/og_tests/testing/: __init__.py  experimental.py
