[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "zero_grain"
version = "0.2.16.dev20260112"
dynamic = ["dependencies"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.build.targets.wheel]
packages = ["src/zero_grain"]



[tool.ruff.lint]
ignore = ['E402', 'F401', 'F841', 'E741']

dependencies = ["ml-switcheroo-compiler"]
